--- a/view.html
+++ b/view.html
@@ -16,8 +16,8 @@
         <p class="lead">There are currently only 5 tables in total, please book your reservation as soon as possible
         </p>
         <hr class="my-4">
-        <a class="btn btn-outline-primary btn-lg" href="#" role="button">Home Page</a>
-        <a class="btn btn-outline-danger btn-lg" href="#" role="button">Book a reservation</a>
+        <a class="btn btn-outline-primary btn-lg" href="/" role="button">Home Page</a>
+        <a class="btn btn-outline-danger btn-lg" href="/make" role="button">Book a reservation</a>
     </div>
 </body>
 
